[ENHANCEMENT] Fixed asset path

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Evar
 description:
-baseurl: /evar
+baseurl: /evar/
 blog_url: http://evarstory.blog.me
 facebook_url: https://www.facebook.com/evarstory
