Add baseurl in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
 title: Evar
+baseurl: /
 description:
 blog_url: http://evarstory.blog.me
 facebook_url: https://www.facebook.com/evarstory
